[package]
name = "garnetdg_app_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
r2d2 = "0.8"
r2d2_sqlite = "0.23"
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
