[package]
name = "garnetdg_app_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5"
actix-web-actors = "4.3"
actix-web-httpauth = "0.8"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled", "functions", "backup", "vtab", "array", "csvtab", "i128_blob", "serialize", "chrono", "serde_json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "fast-rng", "serde"] }
